--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <!-- file css -->
   </head>
   <body>
+    <div
+      class="btn-up position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle  rounded-pill"
+    >
+      <a
+        class="btn  btn-bd-primary py-2 d-flex align-items-center justify-content-center rounded-pill"
+        href="#"
+      >
+      <i class="fa-solid fa-arrow-up"></i>
+      </a>
+    </div>
     <!-- start navbar -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
       <div class="container m-auto">
@@ -455,7 +465,6 @@
             </div>
           </div>
 
-
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button
@@ -482,8 +491,6 @@
               </div>
             </div>
           </div>
-
-
 
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -513,7 +520,6 @@
               </div>
             </div>
           </div>
-
 
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -571,10 +577,6 @@
               </div>
             </div>
           </div>
-
-
-         
-
         </div>
       </div>
     </div>
@@ -1564,19 +1566,21 @@
     </footer>
     <!-- end footer -->
     <!-- start devloper -->
-   <div class="devloper pt-4 pb-4">
-    <div class="container">
-      <div class=" d-flex justify-content-between align-items-center">
-        <p class="text-black-50">
-          @copyright <span class="fw-bold">Ninestars</span> All Right Reversed
-        </p>
-        <p class="text-black-50">
-          Designed by<span class="Moaz fs-6 fw-bold fst-italic"> Moaz ElSabagh</span>
-        </p>
+    <div class="devloper pt-4 pb-4">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <p class="text-black-50">
+            @copyright <span class="fw-bold">Ninestars</span> All Right Reversed
+          </p>
+          <p class="text-black-50">
+            Designed by<span class="Moaz fs-6 fw-bold fst-italic">
+              Moaz ElSabagh</span
+            >
+          </p>
+        </div>
       </div>
     </div>
-   </div>
-    
+
     <!-- end devloper -->
 
     <script src="code/all.min.js"></script>
